--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20",
     "pdf-creator-node": "^2.3.5",
+    "phantomjs": "^2.1.7",
     "puppeteer": "^20.9.0",
     "sails": "^1.5.3",
     "sails-hook-grunt": "^5.0.0",
